<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/distance"
    android:paddingRight="@dimen/distance"
    android:paddingTop="@dimen/distance"
    android:orientation="vertical" >
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="爱好"
        />"
    <CheckBox
        android:id="@+id/read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item1" 
        />
    <CheckBox
        android:id="@+id/listenmusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item2" 
        />
    <CheckBox
         android:id="@+id/sport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item3" 
        />
    <CheckBox
         android:id="@+id/tour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item4" 
        />
    <TextView 
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>
