<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/user"
        />
     <EditText 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/password"
        android:password="true"
        />

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="199dp"
         android:layout_margin="20dp"
         
         android:orientation="horizontal" >

         <Button 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/confirm"
             android:layout_weight="1"
             android:background="@drawable/button_background"
             android:layout_marginRight="20dp"
             android:layout_marginTop="50dp"
             />
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/cancel"
             android:textColor="@drawable/text_color"
             android:layout_weight="1"
             android:background="@drawable/button_background"
             android:layout_marginTop="50dp"
             />
         
     </LinearLayout>

</LinearLayout>
