<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:text="@string/role"
        android:textColor="@android:color/holo_orange_dark" />

    <TextView
        android:id="@+id/skill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/role"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/skill"
        android:textColor="@android:color/holo_orange_dark" />

    <TextView
        android:id="@+id/role_choose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_toRightOf="@id/role"
        android:text="请选择一下角色" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="90dp"
        android:layout_toRightOf="@id/skill"
        android:text="请选择一下技能" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true" 
        android:layout_marginBottom="30dp"/>

</RelativeLayout>